Fixed the nar bar and added a dark mode button.

--- a/style.css
+++ b/style.css
@@ -28,25 +28,36 @@ body {
     
 }
 
+.section-light {
+  
+}
+
+.section-dark {
+
+}
+
+
 .navbar {
   position: sticky;
   top: 0;
   z-index: 1000;
-  background-color: rgba(0, 0, 0, 0.6);
+  /* background-color: rgba(0, 0, 0, 0.6); */
   backdrop-filter: blur(8px);
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  padding: 10px 30px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-  padding: 10px;
+  padding-top: 2em;
+  box-shadow: 0 1px 1px rgba(0,0,0,0.009);
+  width: 100%;
+  justify-content: center;
 }
 
 .nav-links {
   list-style: none;
   display: flex;
+  
   gap: 20px;
-
+  
 }
 
 .nav-links li a {
@@ -55,6 +66,7 @@ body {
   font-size: 20px;
   font-weight: 500;
   transition: color 0.3s ease;
+  font-size: 30px;
 }
 
 .nav-links li a:hover {
@@ -195,15 +207,6 @@ h2 {
 }
 
 
-.section-light {
-    background-color: white;
-}
-
-.section-dark {
-    background-color: rgb(255,232,216);
-}
-
-
 .underline-ani {
     position: relative;
     color: white;
@@ -256,6 +259,8 @@ h2 {
     border: 4px solid #36BA98;
 
 }
+
+
 
 
 
